--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.84.1",
     "axios": "^1.11.0",
+    "cookie": "^1.0.2",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
